codama-macros/tests/codama_attribute/type_nodes/string_type_node/unrecognized_attribute.fail.rs
use codama::codama;

#[codama(type = string(unrecognized))]
pub struct Test;

fn main() {}
